Fix mobile view finna-main-header padding & adjust tabs on mobile view

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -298,7 +298,8 @@ input[type=number].input-year::-webkit-outer-spin-button {
 .template-name-results, .template-name-search {
     @media (max-width: @screen-xs-max) {
         & .finna-main-header {
-            padding: 0px 0;
+            padding: 0px 0px;
+            display: none;
             & .search-result-header {
                 font-size: 1.3em;
                 margin-top: 15px;
